--- a/index.html
+++ b/index.html
@@ -145,12 +145,47 @@
             <div class="blank"></div>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque asperiores cupiditate dolor facilis impedit officia reiciendis.</p>
         </div>
-        <div class="Courses_content">
-            <div class="progress">
-                <div class="progress-bar" width="80%">80</div>
+    <div class="Courses_content">
+        <div class="circle1">
+        <div class="big1">
+                <p>90%</p>
             </div>
+        <div class="contain">
             <h2>Web design</h2>
         </div>
+    </div>
+
+
+    <div class="circle1">
+        <div class="big2">
+                <p>75%</p>
+            </div>
+        <div class="contain">
+            <h2>HTML / CSS</h2>
+        </div>
+    </div>
+
+
+    <div class="circle1">
+        <div class="big3">
+                <p>70%</p>
+            </div>
+        <div class="contain">
+            <h2>Graphic Design</h2>
+        </div>
+    </div>
+
+
+    <div class="circle1">
+        <div class="big4">
+                <p>85%</p>
+            </div>
+        <div class="contain">
+            <h2>UI / UX</h2>
+        </div>
+    </div>
+         
+</div>
 
     </section>
   <section class="portfolio">
